# 09_ffi

./: Cargo.toml  Makefile  README.md  cliff.toml
algo/: Cargo.toml
algo/src/: lib.rs  matrix.rs  vector.rs
node-binding/: Cargo.toml  deny.toml
node-binding/src/: algo.rs  lib.rs  matrix.rs
python-binding/: Cargo.toml  pyproject.toml
python-binding/python/algo/: _lowlevel.cp312-win_amd64.pyd
python-binding/src/: hasher.rs
src/: lib.rs
